--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <body>
     </body>
     <script type="text/javascript">
-        window.location.href="http://note.youdao.com/noteshare?id=f9e8409bc95269d2776e6b00cefea545";　
+        window.location.href="http://note.youdao.com/noteshare?id=f9e8409bc95269d2776e6b00cefea545";
+    </script>   
 </html>
